# thesis

./: .gitattributes  .gitignore  et --hard 42abdeb5f71dc9793e84fd15e583d2f63eaa723f  rome_amenities.gpkg
fmm/example/data/: mr.txt
fmm/python/: CMakeLists.txt
geolife/: clustering.py  noise_distribution.ipynb  pert_noise_pdf.ipynb  poi_and_semantics.ipynb  poi_query.py  read_geolife.py
poi_extraction/: staypoint_detection.ipynb
romePIOs/: analysis.py  analysis3.py  analysisTimeInterval.py  analysis_summary_20250319_115343.txt  analysis_summary_20250319_132616.txt  analysisv2.py  analysisv5routeboolean.py  analysisv6withdebug.py  anaylsisv4STACKED.py  rome_amenities.gpkg  taxi.csv  taxiPOINT.txt  taxi_first1000_points_20250320_104300.html  taxi_stops.html  taxi_stops10.html  taxi_stops100.html  taxi_stopsSTACKED.html  taxi_stopsTIME.html  taxi_stopsTIMEmin20samples.html  taxi_stopsTIMEmin50samples.html  taxi_stops_20250319_115343.html  taxi_stops_20250319_132616.html  taxi_stops_local_data.html  taxi_stops_local_data2.html  taxi_stopsv2.html  taxi_stopsv3.html  test.py  test2.py  visualizer_pert_mm.py
test/: taxi-2-rit-1.csv  visualize.ipynb
trace_obfuscate/: .venv  geo_indistinguishability.ipynb  requirements.txt
tracerssource/tracers_fromzero/: .gitignore  Cargo.toml  PKG-INFO  build.rs  pyproject.toml  readme.md
tracerssource/tracers_fromzero/python/tracers/: __init__.py  _tracers.pyi  pure.py
tracerssource/tracers_fromzero/src/: lib.rs
tracerssource/tracers_fromzero/tests/: mlmodel_draft.ipynb  oxviterbi.ipynb  quick.ipynb  splittrace.html  test_ml.ipynb  testplot.ipynb  testtracers.ipynb
(+40 files in other folders)
