[package]
name = "tracers"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tracers"
# path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.18.0"
rand_distr = "0.4.3"
rand = "0.8.5"
rayon = "1.7.0"
geo = "0.26.0"
osmpbfreader = "0.16.0"
pathfinding = { git = "https://github.com/toondehaene/pathfinding"}
petgraph = "0.6.4"
ordered-float = "4.2.0"
ndarray = { version = "0.15.6" }
itertools = "0.13.0"
fnv = "1.0.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.117"
fixed = "1.27.0"

[target.'cfg(has_libopenblas)'.dependencies]
ndarray = { version = "0.15.6", features = ["blas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }


[dependencies.pyo3]
version = "0.18.1"
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
# features = ["abi3-py310"]
