[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tracers"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["networkx","numpy"]


[tool.maturin]
python-source = "python"
module-name = "tracers._tracers"
features = ["pyo3/extension-module"]
generate-stubs = true
